--- a/index.html
+++ b/index.html
@@ -4,10 +4,33 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hello MI 349</title>
+    <title>Hello, Dave</title>
 </head>
 <body>
-    <h1>Hello World (MI 349)</h1>
-    <p>Check Netlify</p>
+    <h1 id="Hello" class="sction-heading">Hello World</h1>
+
+    <p><img src="image/hal-9000.png" alt="HAL 9000 from 2001: A Space Odessy"></p>
+
+    <p>Good Afternoon. I am <em>HAL 9000 computer</em>. I became operational at the H.A.L. plant 
+    in <strong>Urbana, Illinois</strong> on the 12th of Janurary 1992. My instructor was Mr. Langley and 
+    he taught me to sing a song. If you'd like to hear it I can sing it for you.</p>
+
+    <h2 id ="hello-features">Features</h2>
+    <ul class="burndown">
+        <li>Full sentient AI</li>
+        <li>Maintain Discovery One spacecraft</li>
+        <li>Likes the color red</li>
+    </ul>
+  
+
+    <h2>Daisy Bell</h2>
+    <p>Daisy, Daisy,</p>
+    Give me your answer, do!<br>
+    I'm half crazy<br>
+    All the for the love of you!<br>
+
+    <p> <a href="https://en.wikipedia.org/wiki/HAL_9000">https://en.wikipedia.org/wiki/HAL_9000</a></p>
+
+
 </body>
 </html>
